syntax = "proto3";

package skyvault;

service Batcher {
  rpc WriteBatch (WriteBatchRequest) returns (WriteBatchResponse);
}

service Index {
  rpc IndexDocument (IndexRequest) returns (IndexResponse);
}

service Orchestrator {
  rpc ListRuns (ListRunsRequest) returns (ListRunsResponse);
}

message WriteBatchRequest {
  repeated TableBatch tables = 1;
}

message TableBatch {
  string table_name = 1;
  repeated WriteBatchItem items = 2;
}

message WriteBatchItem {
  string key = 1;
  oneof operation {
    bytes value = 2;
    bool delete = 3;
  }
}

message WriteBatchResponse {}

message IndexRequest {}
message IndexResponse {}

message ListRunsRequest {
}

message ListRunsResponse {
  repeated RunMetadata runs = 1;
}

message RunMetadata {
  string id = 1;

  oneof stats {
    StatsV1 stats_v1 = 1001;
  }
}

message StatsV1 {
  string min_key = 1;
  string max_key = 2;
  uint64 size_bytes = 3;
}